# hyprcorrect

./: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
build-aux/: com.hyprcorrect.Hyprcorrect.metainfo.xml  com.hyprcorrect.Hyprcorrect.yml  macos-info.plist
crates/hyprcorrect/: Cargo.toml
crates/hyprcorrect-core/: Cargo.toml
crates/hyprcorrect-core/assets/: WORDNET-LICENSE.txt
crates/hyprcorrect-core/src/: buffer.rs  chord.rs  config.rs  definitions.rs  languagetool.rs  lib.rs  llm.rs  providers.rs  replace.rs  runtime.rs  secrets.rs
crates/hyprcorrect-platform/: Cargo.toml
crates/hyprcorrect-platform/src/: lib.rs
crates/hyprcorrect-platform/src/linux/: capture.rs  chord_capture.rs  clipboard.rs  emit.rs  focus.rs  hotkey.rs  mod.rs  tray.rs
crates/hyprcorrect-platform/src/macos/: app.rs  apps.rs  capture.rs  clipboard.rs  emit.rs  ffi.rs  focus.rs  hotkey.rs  keymap.rs  mod.rs  tray.rs
crates/hyprcorrect-platform/src/windows/: mod.rs
crates/hyprcorrect-ui/: Cargo.toml
crates/hyprcorrect-ui/src/: apps.rs  autostart.rs  docker.rs  icon.rs  lib.rs  ngrams.rs  prefs.rs  review.rs  vimedit.rs  worddiff.rs
crates/hyprcorrect/src/: main.rs
docs/plans/: macos-rubber-band-scroll.md
packaging/: hyprcorrect.desktop
packaging/aur/: PKGBUILD  README.md
packaging/aur-bin/: PKGBUILD
packaging/aur-git/: PKGBUILD
packaging/macos/: Info.plist.template  package.sh  sign-and-notarize.sh
scripts/: codesign-dev.sh
