[workspace]
resolver = "3"
members = [
    "crates/hyprcorrect-core",
    "crates/hyprcorrect-platform",
    "crates/hyprcorrect-ui",
    "crates/hyprcorrect",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jon Kinney <jon@headway.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jondkinney/hyprcorrect"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates. Used directly (no `package = ` rename) — unlike
# vernier, the bare `hyprcorrect-*` names are free on crates.io.
hyprcorrect-core = { path = "crates/hyprcorrect-core", version = "0.1.0" }
hyprcorrect-platform = { path = "crates/hyprcorrect-platform", version = "0.1.0" }
hyprcorrect-ui = { path = "crates/hyprcorrect-ui", version = "0.1.0" }

# Errors / logging.
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

# Config / serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"

# CLI.
clap = { version = "4", features = ["derive"] }

# Async runtime — the daemon (M1+).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"

# GUI (M3+).
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "wayland", "x11", "glow"] }
egui = "0.32"

# Correction providers / secrets (M1, M4). `harper-core` is added when
# the Harper provider is wired up in M1, so its version can be pinned
# against a build that actually exercises it.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
