[workspace]
resolver = "3"
members = [
    "crates/hyprcorrect-core",
    "crates/hyprcorrect-platform",
    "crates/hyprcorrect-ui",
    "crates/hyprcorrect",
]

[workspace.package]
version = "0.2.3"
edition = "2024"
authors = ["Jon Kinney <jon@headway.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jondkinney/hyprcorrect"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates. Used directly (no `package = ` rename) — unlike
# vernier, the bare `hyprcorrect-*` names are free on crates.io.
hyprcorrect-core = { path = "crates/hyprcorrect-core", version = "0.2.3" }
hyprcorrect-platform = { path = "crates/hyprcorrect-platform", version = "0.2.3" }
hyprcorrect-ui = { path = "crates/hyprcorrect-ui", version = "0.2.3" }
thiserror = "2"
env_logger = "0.11"

# CLI.
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"

# Config (toml on disk, OS-resolved paths) and secrets.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
keyring = { version = "3", features = ["linux-native", "apple-native", "windows-native"] }

# HTTP — used by the LLM provider (Anthropic Messages API, M4) and the
# LanguageTool HTTP provider (M5). `ureq` is sync + small (no tokio).
ureq = { version = "2", features = ["json"] }
serde_json = "1"

# Downloading + unzipping the LanguageTool n-gram archive from prefs.
zip = "2"
fs2 = "0.4"

# Decompressing the bundled WordNet definitions (gzip) at first lookup.
flate2 = "1"

# GUI.
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "wayland",
    "x11",
    "glow",
] }
egui = "0.32"

# Icon rasterization for the prefs sidebar.
# Default features enable text shaping so the bundled SVG can render
# `<text>` elements through a fontdb populated with system fonts.
resvg = "0.45"
tiny-skia = "0.11"
usvg = "0.45"
# PNG decode for the system app icons (lots of theme icons still ship
# as PNGs at fixed sizes). Default features pull in JPEG/GIF/etc; we
# only need PNG.
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
