[package]
name = "hyprcorrect-core"
description = "Core logic for hyprcorrect: configuration, the keystroke buffer, and correction providers."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
async-trait.workspace = true
spellbook = "0.4.0"

# Configuration: TOML on disk, OS-resolved paths, OS keychain for secrets.
serde.workspace = true
toml.workspace = true
directories.workspace = true
keyring.workspace = true

# HTTP for network correction providers (LLM, LanguageTool).
ureq.workspace = true
serde_json.workspace = true
