[package]
name = "hyprcorrect-platform"
description = "Platform layer for hyprcorrect: input capture, synthetic input, and global hotkeys (macOS, Linux/Wayland)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# Per-OS backends (evdev, wayland-client, xkbcommon, ashpd, objc2-*, …)
# are added under [target.'cfg(...)'.dependencies] from milestone M1.
[dependencies]
hyprcorrect-core.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
xkbcommon = "0.9.0"
ashpd = { version = "0.13", features = ["global_shortcuts"] }
ksni = { version = "0.3", features = ["blocking"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
futures-util = "0.3"
