[package]
name = "hyprcorrect-platform"
description = "Platform layer for hyprcorrect: input capture, synthetic input, and global hotkeys (macOS, Linux/Wayland)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# Per-OS backends (evdev, xkbcommon, signal-hook, ksni, objc2-*, …) are
# added under [target.'cfg(...)'.dependencies] from milestone M1.
[dependencies]
hyprcorrect-core.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
xkbcommon = "0.9.0"
ksni = { version = "0.3", features = ["blocking"] }
signal-hook = "0.3"
