[package]
name = "hyprcorrect-ui"
description = "egui preferences window and suggestion popup for hyprcorrect."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hyprcorrect-core.workspace = true
eframe.workspace = true
egui.workspace = true
resvg.workspace = true
tiny-skia.workspace = true
usvg.workspace = true
image.workspace = true
