[package]
name = "hyprcorrect-ui"
description = "egui preferences window and suggestion popup for hyprcorrect."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hyprcorrect-core.workspace = true
hyprcorrect-platform.workspace = true
eframe.workspace = true
egui.workspace = true
# Shared egui design system, published to crates.io.
kanso = "0.1.4"
resvg.workspace = true
tiny-skia.workspace = true
usvg.workspace = true
image.workspace = true

# Probing the configured LanguageTool URL so prefs can detect an
# already-running server regardless of how it's hosted.
ureq.workspace = true
# Downloading + unzipping the LanguageTool n-gram archive in prefs.
zip.workspace = true
fs2.workspace = true

[features]
# Enabled only by the notarized macOS prebuild, which patches in the cohort
# egui-winit/winit forks that publish the trackpad scroll phase. With it, the
# macOS prefs window uses kanso's kinetic fling + rubber-band (`scroll_view`)
# off the real finger lift; without it (source / crates.io builds, which have
# no fork and so no phase signal) macOS keeps the native egui `ScrollArea`,
# since kanso's gap-based lift inference pins a flick on macOS. No-op on Linux,
# which always uses `scroll_view`.
cohort-fork = []
