[package]
name = "hyprcorrect"
description = "Keyboard-driven desktop spelling and typo corrector for macOS and Linux/Wayland."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["spelling", "autocorrect", "wayland", "hyprland", "keyboard"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "hyprcorrect"
path = "src/main.rs"

[dependencies]
hyprcorrect-core.workspace = true
hyprcorrect-platform.workspace = true
hyprcorrect-ui.workspace = true
clap.workspace = true
env_logger.workspace = true
serde_json.workspace = true

[features]
# Forwarded to hyprcorrect-ui: the notarized macOS prebuild enables this
# (alongside the [patch.crates-io] cohort fork pins) so the prefs window gets
# kanso's kinetic fling + rubber-band scrolling. Off in source/crates.io builds.
cohort-fork = ["hyprcorrect-ui/cohort-fork"]
